--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Yo</title>
+    <title>Fun</title>
     <link href='/stylesheets/screen.css' media='all' rel='stylesheet' type='text/css' />
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js' type='text/javascript'></script>
     <script src='/javascripts/application.js' type='text/javascript'></script>
   </head>
   <body>
     <header>
-      <h1>Yo</h1>
+      <h1>Fun, Have It!</h1>
     </header>
   </body>
 </html>
