--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <script src='/javascripts/application.js' type='text/javascript'></script>
   </head>
   <body>
-    <header>
-      <h1>Fun, Have It!</h1>
-    </header>
+    <div class='container' id='container'>
+      <header>
+        <h1>Fun, Have It!</h1>
+      </header>
+    </div>
   </body>
 </html>
