Reboot of the fun toolkit, now with MORE FUN!
Gone are the ways of the reliance on RVM, Ruby and the Compass/Sass
setup this toolkit used in the past.  Now with the new hotness of Yarn,
Webpack, Stimulus and Tailwind.

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  <link href="styles.css?e2944bd3a1fe69ad8469" rel="stylesheet"></head>
+  </head>
 
   <body class="font-sans flex justify-center items-center min-h-screen">
     <h1 class="text-5xl">Fun!</h1>
-  <script type="text/javascript" src="scripts.js?e2944bd3a1fe69ad8469" async></script></body>
+  </body>
 </html>
